--- a/templates/masterheader.html
+++ b/templates/masterheader.html
@@ -51,7 +51,13 @@
                                     </a>
 
                                 </li>
+                                                   <li class="nav-item">
+                                    <a class="nav-link me-2" href="{% url 'add-client' %}">
+                                        <i class="fas fa-heart opacity-6 text-white me-1" aria-hidden="true"></i>
+                                       استمتع بخدماتنا
+                                    </a>
 
+                                </li>
                                     {% endif %}
 
 
