--- a/templates/partials/_realExpectTable.html
+++ b/templates/partials/_realExpectTable.html
@@ -4,30 +4,31 @@
                         <thead class="text-black">
                         <tr>
                               <th class=" text-dark text-xxs" style="width: 2rem;">
-                              الشركة
+                              {{ content.first_header|safe }}
                             </th>
                             <th class="text-dark text-xxs " style="width: 2rem;">
-                                شركة الأبحاث
+                                      {{ content.second_header|safe }}
                             </th>
                             <th class="text-dark text-xxs " style="width: 2rem;">
-                                توقعات الأرباح
+                       {{ content.third_header|safe }}
                             </th>
   <th class="text-dark text-xxs " style="width: 2rem;">
-                           الأرباح الفعلية
+                       {{ content.nine_header|safe }}
                             </th>
                             <th class=" text-dark text-xxs" style="width: 2rem;">
-مدى الأنحراف
+                       {{ content.seventh_header|safe }}
+
                             </th>
 
                             <th class=" text-dark text-xxs" style="width: 2rem;">
-                                الربع الثانى 2021
+                   {{ content.fifth_header|safe }}
                             </th>
                             <th class=" text-dark text-xxs" style="width: 2rem;">
-                                مدى الأنحراف
+                          {{ content.seventh_header|safe }}
                             </th>
 
                             <th class=" text-dark text-xxs" style="width: 2rem;">
-                                المرفق
+                           {{ content.eight_header|safe }}
                             </th>
                         </tr>
                         </thead>
