--- a/templates/partials/_ratesTable.html
+++ b/templates/partials/_ratesTable.html
@@ -43,7 +43,7 @@
                                 <tbody>
                                 {% for item in rates %}
                                     <tr>
-                           <td class="d-flex" style="justify-content: space-around; ">
+                           <td style="justify-content: space-around; ">
                                              {% if request.user.user_type == 3 %}
                                               <a  href="{% url 'add_wish' item.CompanyEntered.id %}" style="margin-inline:0.2rem ;">
                                                 <i class="far fa-bookmark"></i>
