--- a/userInterface/templates/userInterface/expect-list.html
+++ b/userInterface/templates/userInterface/expect-list.html
@@ -43,7 +43,7 @@
                         </div>
 
             <div class="card-body px-0 pb-2">
-            {% include 'partials/_expectTable.html' with expects=expects %}
+            {% include 'partials/_expectTable.html' with expects=expects content=content %}
 
                 {% include 'partials/_pagination.html' with page_obj=expects only %}
 
