--- a/owners/templates/owners/createarrows.html
+++ b/owners/templates/owners/createarrows.html
@@ -1,5 +1,6 @@
 {% extends 'main.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block title %}
 ملكية الأسهم 
@@ -20,14 +21,7 @@
                     <div class="card card-blog card-plain">
                         <div class="card-body px-1 pb-0">
                             <form  method="post">
-                                {% include 'partials/_messages.html' %}
-            {% csrf_token %}
-                                     {% for filed in form %}
-                                                    <div class="form-group">
-        
-                                                        {{ filed }}
-                                                    </div>
-                                                {% endfor %}
+                                                             {{ form|crispy }}
                   <button type="submit" class="btn btn-sm text-white bg-maal">
                                    إضافة
                                </button>
