--- a/templates/partials/_expectTable.html
+++ b/templates/partials/_expectTable.html
@@ -18,13 +18,13 @@
                             </th>
 
                             <th class=" text-dark text-xxs" style="width: 2rem;">
+                                {{ content.sixth_header|safe }}
+                            </th>
+                            <th class=" text-dark text-xxs" style="width: 2rem;">
                                 {{ content.fifth_header|safe }}
                             </th>
                             <th class=" text-dark text-xxs" style="width: 2rem;">
                                 {{ content.sixth_header|safe }}
-                            </th>
-                            <th class=" text-dark text-xxs" style="width: 2rem;">
-                                {{ content.seventh_header|safe }}
                             </th>
 
                             <th class=" text-dark text-xxs" style="width: 2rem;">
@@ -57,31 +57,32 @@
                                 </td>
                                 <td>
 
-                                    <p class=" text-xxs">{{ item.realEarn }}</p>
+                                    <p class=" text-xxs">{{ item.deviations.first.expect_earn }}</p>
                                 </td>
-                                <td class="text-xxs">
-                                    <p class=" text-xxs">{{ item.third2020 }}</p>
+                                    <td>
 
+                                    <p class=" text-xxs">{{ item.deviations.first.quarter_now }}</p>
                                 </td>
+                                                            <td class="  text-xxs">
+           {% if item.deviations.first.deviation_real_now < 0 %}
+                                        <p class="text-danger text-xxs ">{{ item.deviations.first.deviation_real_now|floatformat:-2 }} %</p>
+                                    {% else %}
+                                        <p class="text-success text-xxs">{{ item.deviations.first.deviation_real_now|floatformat:-2 }} %</p>
+                                    {% endif %}
+                                </td>
+
                             <td class="text-xxs">
-                                    <p class=" text-xxs">{{ item.second2020 }}</p>
+                                    <p class=" text-xxs">{{ item.deviations.last.quarter_now }}</p>
 
                                 </td>
                                 <td>
-                                    {% if item.deviationthird2020 < 0 %}
-                                        <p class="text-danger text-xxs ">{{ item.deviationthird2020|floatformat:-2 }} %</p>
+                                    {% if item.deviations.last.deviation_real_now < 0 %}
+                                        <p class="text-danger text-xxs ">{{ item.deviations.last.deviation_real_now|floatformat:-2 }} %</p>
                                     {% else %}
-                                        <p class="text-success text-xxs">{{ item.deviationthird2020|floatformat:-2 }} %</p>
+                                        <p class="text-success text-xxs">{{ item.deviations.last.deviation_real_now|floatformat:-2 }} %</p>
                                     {% endif %}
                                 </td>
 
-                              <td class="  text-xxs">
-                                    {% if item.deviationsecond2020 < 0 %}
-                                        <p class="text-danger text-xxs">{{ item.deviationsecond2020|floatformat:-2 }} %</p>
-                                    {% else %}
-                                        <p class="text-success text-xxs">{{ item.deviationsecond2020|floatformat:-2 }} %</p>
-                                    {% endif %}
-                                </td>
 
                              <td class="  text-xxs">
                                  {% if item.report %}
