--- a/templates/partials/_expectTable.html
+++ b/templates/partials/_expectTable.html
@@ -18,13 +18,13 @@
                             </th>
 
                             <th class=" text-dark text-xxs" style="width: 2rem;">
-                                {{ content.sixth_header|safe }}
-                            </th>
-                            <th class=" text-dark text-xxs" style="width: 2rem;">
                                 {{ content.fifth_header|safe }}
                             </th>
                             <th class=" text-dark text-xxs" style="width: 2rem;">
                                 {{ content.sixth_header|safe }}
+                            </th>
+                            <th class=" text-dark text-xxs" style="width: 2rem;">
+                                {{ content.seventh_header|safe }}
                             </th>
 
                             <th class=" text-dark text-xxs" style="width: 2rem;">
